# Harness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
design/: PLAN.md  v1-design.md  v2-agent-service-plan.md  v2-architecture.md  v2-evolution-design.md  v2-implementation-plan.md
design/feedback/: apscheduler_v4_api.md  video-pipeline-review.md
docs/plans/: 2026-03-21-stock-analysis-pipeline-design.md  2026-03-21-stock-analysis-pipeline.md  2026-03-22-dialogue-design.md  2026-03-22-dialogue-implementation.md
examples/: analyze_harness.py  research_report.py  video_pipeline.py
examples/agent_discussion/: main.py
examples/analyze_harness/: README.md
examples/astock_daily_briefing/: README.md  main.py
examples/code_stats/: README.md  main.py
examples/debate_ai_tools/: main.py
examples/iterationforge_style/: README.md  main.py
examples/poker_debate/: main.py
examples/research/: __init__.py  agents.py  main.py  pipeline.py  state.py
examples/research_report/: README.md
examples/stock_discussion/: main.py  run.sh
examples/stock_traders/: main.py
examples/three_way_debate/: main.py
examples/video_pipeline/: README.md
harness/: __init__.py  agent.py  cli.py  harness.py  memory.py  state.py  task.py  triggers.py
harness/_internal/: compat.py  condition.py  deserialize.py  dialogue.py  discussion.py  event_bus.py  exceptions.py  executor.py  loop.py  parallel.py  polling.py  service.py  session.py  stream_parser.py  task_index.py
harness/notifier/: base.py  telegram.py
harness/runners/: _http.py  agent_leader.py  (+4 more)
tests/: conftest.py
(+63 files in other folders)
