[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-ai"
version = "0.1.0"
description = "AI-native 通用自动化流水线框架，内置 Claude Code runner"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "apscheduler>=4.0.0a1",
    "pydantic>=2.0",
    "aiosqlite",
    "httpx",
]

[project.scripts]
harness = "harness.cli:app"

[project.optional-dependencies]
cli = [
    "typer>=0.9",
    "rich>=13",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["harness"]
